Sensor API opgehaald, herbruikbare JavaScript code die data de API vertaalt toegevoegd en frontend gekoppeld aan backend voor de afmetingen van de sensoren.

--- a/dashboard1.css
+++ b/dashboard1.css
@@ -182,7 +182,7 @@
     flex-direction: column;
     gap: 0;
     align-items: center;
-    justify-content: top;
+    /*justify-content: top;*/
     overflow: visible;
   }
   
