--- a/dashboard1.css
+++ b/dashboard1.css
@@ -26,6 +26,7 @@
     display: grid;
     grid-template-rows: 22% 60% 18%;
     height: 100vh;
+    position: relative;
   }
   
   .section {
@@ -175,7 +176,6 @@
     gap: 18px;
     align-items: center;
     justify-items: center;
-    height: 100%;
     width: 100%;
     margin-left: 0;
     padding-left: 100px;
@@ -422,4 +422,20 @@
     font-weight: bolder;
     color: #fff;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+}
+
+.dashboard-page {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s cubic-bezier(.4,0,.2,1), visibility 0s linear 0.5s;
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+}
+
+.dashboard-page.active {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
+    z-index: 10;
+    position: relative;
 }
